--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,185 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+  font-family: 'IBM Plex Sans';
+  src: url('/fonts/IBMPlexSans-Regular.woff2') format('woff2'),
+       url('/fonts/IBMPlexSans-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
+@font-face {
+  font-family: 'IBM Plex Sans';
+  src: url('/fonts/IBMPlexSans-Medium.woff2') format('woff2'),
+       url('/fonts/IBMPlexSans-MediumItalic.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  src: url('/fonts/IBMPlexSans-SemiBold.woff2') format('woff2'),
+       url('/fonts/IBMPlexSans-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  src: url('/fonts/IBMPlexSans-Bold.woff2') format('woff2'),
+       url('/fonts/IBMPlexSans-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+body {
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+
+.logo__name {
+  font-weight: 700;
+  color: #096fac;
+  font-size: 20px;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
+.logo__description {
+  line-height: 1em;
+  font-size: 10px;
+  color: #939393;
+}
+
+.search-select-item {
+  font-size: 13px;
+  cursor: default;
+  color: #2865b7;
+  border-bottom: 1px dashed #2865b7;
+}
+
+.search-select--expand::before {
+    display: inline-block;
+    vertical-align: baseline;
+    width: 16px;
+    height: 10px;
+    background: url(/img/search-expanded.png);
+    content: "";
+    margin-right: 8px
+}
+.search-select--active .search-select--expand::before {
+    display: inline-block;
+    vertical-align: baseline;
+    width: 16px;
+    height: 10px;
+    background: url(/img/search-expanded-active.png);
+    content: "";
+    margin-right: 8px
+}
+
+.search-select--active {
+    background: #f0f3f6;
+    color: #000;
+    padding: 4px 10px 3px;
+    border-radius: 5px;
+    border-bottom: none;
+}
+
+.examples__select {
+  font-size: 13px;
+  cursor: pointer;
+  color: #2865b7;
+  border-bottom: 1px solid #2865b7;
+}
+
+.is-active {
+  background: #f0f3f6;
+  color: #000;
+  padding: 4px 10px 3px;
+  border-radius: 5px;
+  border-bottom: none;
+}
+
+.css-b62m3t-container {
+  height: 46px !important;
+  width: 90% !important;
+  font-size: 15px;
+  border-radius: 4px 0 0 4px !important;
+  border: 1px solid #6ea3df;
+  color: #000;
+  border-right: none;
+}
+
+.css-13cymwt-control {
+  height: 46px !important;
+  font-size: 15px !important;
+  border-radius: 4px 0 0 4px !important;
+  border: 1px solid #6ea3df !important;
+  color: #000 !important;
+  border-right: none;
+}
+.css-13cymwt-control:active {
+  height: 46px !important;
+  font-size: 15px !important;
+  border-radius: 4px 0 0 4px !important;
+  border: 1px solid #6ea3df !important;
+  color: #000 !important;
+  border-right: none;
+}
+.css-t3ipsp-control {
+  height: 46px !important;
+  font-size: 15px !important;
+  border-radius: 4px 0 0 4px !important;
+  border: 1px solid #6ea3df !important;
+  color: #000 !important;
+  border-right: none;
+}
+
+.css-13cymwt-control:hover {
+  background-color: #fffcf2;
+}
+.css-1hb7zxy-IndicatorsContainer {
+  display: none !important;
+}
+
+.css-1nmdiq5-menu {
+  margin-top: 3px !important;
+}
+
+.search_btn {
+    width: 183px;
+    height: 46px;
+    align-items: center;
+    font-size: 14px;
+    color: #fff;
+    border-radius: 0 4px 4px 0;
+    background-color: #4764a5;
+}
+
+.search_btn:hover {
+  background-color: #204a89;
+}
+
+.examples__zoom {
+  position: relative;
+  width: 118px;
+  height: 185px;
+}
+
+.examples__zoom img {
+  width: 100%;
+  height: 100%;
+}
+
+.examples__zoom:hover::before {
+  content: "";
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-image: url('/img/zoom-in.png');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  cursor: pointer;
+}
+
+
